# alphazerolabs

./: .gitignore  CLAUDE.md  PRODUCT.md  README.md  handoff.md  pyproject.toml
.firecrawl/: nof1-techpost1.md  rg-cryptogdelt.md  tsmom-qp.md  tsmom.json  volume.json
backtest/: engine.py  evidence.py  lifecycle.py  metrics.py  portfolio.py  propr_v12_signal.py  risk.py  signals.py  stats.py  strategy.py  walkforward.py
brain/: README.md  agents-rr2-v1.md  agents-v1.md  backtest_portfolio_factors.md  claude-strategy-v1.md  combo-voltarget.md  commodities-cot-trend-v1.md  commodities-trend-v1.md  funding-carry-v1.md  funding-squeeze-breakout-g2-g1-g1.md  funding-squeeze-breakout-g2-g1-g2.md  funding-squeeze-breakout-g2-g1-g3.md  funding-squeeze-breakout-g2-g1.md  funding-squeeze-breakout-g2-g2.md  funding-squeeze-breakout-g2-g3.md  funding-squeeze-breakout-g2-g4.md  funding-squeeze-breakout-v1.md  geopolitics-v1.md  glm-regime-confluence-v1.md  glossary.md  highvol-port-v1.md  lessons.md  lux-0.1-beta.md  lux-confluence-rr2-v1.md  lux-flow-confluence-v1.md  lux-nw-continuation-v1.md  lux-nw-liq-v1.md  lux-nw-tsmom-v1.md  lux-regime-3leg-v1.md  lux-triple-3orthogonal-v1.md  news-event.md  research_crossasset.md  timeline.md  tsmom-atr-v1.md  tsmom-conservative-v1.md  tsmom-liq-v1.md  tsmom-v1.md  vwap-reversion-v1.md  xsmom-highvol-combo-v1.md  xsmom-highvol-voltarget-v1.md  (+2 more)
dashboard/: IMPROVEMENTS.md  SKILL.md  backtest.html  data.js  decisioni.html  design-prompt.md  eventi.html  evoluzione.html  geopolitica.html  health.json  index.html  lezioni.html  llm.html  (+9 more)
(+244 files in other folders)
