[project]
name = "defi-ai-vault"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hyperliquid-python-sdk>=0.24.0",
    "numpy>=2.0",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "python-ulid>=3.1.0",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "yfinance>=1.4.1",
]

[project.optional-dependencies]
# hmmlearn serve solo a scripts/precompute_hmm.py (cache regimi HMM);
# import lazy nel modulo, il resto del sistema gira senza
hmm = ["hmmlearn>=0.3"]
